finally up to date

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -27,6 +27,18 @@
   year={1987}
 }
 
+%no, its called multiterminal cut
+@article{dah94,
+  title={The complexity of multiterminal cuts},
+  author={Dahlhaus, E. and Johnson, D.S. and Papadimitriou, C.H. and Seymour, P.D. and Yannakakis, M.},
+  journal={SIAM J. Comput.},
+  volume={23},
+  number={4},
+  pages={864--894},
+  year={1994},
+  publisher={Citeseer}
+}
+
 %Dean google mapreduce map reduce
 @article{dea08,
   title={{MapReduce: Simplified data processing on large clusters}},
@@ -39,6 +51,15 @@
   year={2008},
   publisher={ACM}
 }
+
+%i havent read this paper, but im reference chaining it
+@article{for62,
+  title={Flows in networks},
+  author={Ford, L.R. and Fulkerson, D.R.},
+  year={1962},
+  publisher={RAND Corporation}
+}
+
 
 @ONLINE{glpk,
   author = {Makhorin, Andrew},
