--- a/hons/docs/complexity2.tex
+++ b/hons/docs/complexity2.tex
@@ -9,8 +9,147 @@
 
 \begin{document}
 
+\begin{definition}
+Graph $G$
+\begin{align}
+	\nonumber G = & (V,E) \\
+	\nonumber V = & \{v_1, v_2, ... v_n\} \\
+	\nonumber E \subseteq & V^2
+\end{align}
+\end{definition}
+
+\begin{definition}
+Path $\pi$ for graph $G = (V,E)$ of length $l$
+\begin{align}
+	\nonumber \pi(v_a, v_b) = \{(x_i, x_{i+1}) : 0 \leq i < l \wedge x_i, x_{i+1} \in V \wedge x_0 = v_a \wedge x_l = v_b)\}
+\end{align}
+\end{definition}
+
+\begin{definition}
+Pathset $\Pi_G$ for graph $G = (V,E)$
+\begin{align}
+	\nonumber \Pi_G(v_a, v_b) = \{\pi(v_a, v_b) : \pi(v_a, v_b) \subseteq E\}
+\end{align}
+Hence if there is no path from $v_a$ to $v_b$ in $G$: $\Pi_G(v_a, v_b) = \emptyset$
+\end{definition}
+
+
 \section{Multiterminal Cut Problem}
-MTC: Given a graph $G=(V,E,S,w)$, a set $S=\{s_1, s_2, ... s_k\}$ of $k$ specified vertices or {\em terminals} : $S \subseteq V$ , and a positive weight $w(e): E \rightarrow \mathbb{R}^+$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
+
+\begin{definition}
+Multi-Terminal Cut
+
+Given a graph $G=(V,E,w,T)$, a set $T=\{t_1, t_2, ... t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$ , and a positive weight $w(e)$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
+An instance of MTC is therefore defined fromally:
+
+\begin{align}
+	\nonumber MTC = & (V,E,w,T)
+	\nonumber & E \subseteq V^2\\
+	\nonumber & w : E \rightarrow \mathbb{Z}^+\\
+	\nonumber & T \subseteq V
+\end{align}
+
+Solution Space: $S \in P(E)$
+
+Solution Cost: $C(S) = \displaystyle\sum\limits_{(u,v) \in S} w(u,v)$
+
+Feasible Solution: $S \in F \subseteq P(E)$
+\begin{align}
+	\nonumber \Pi_{G=(V,E \setminus S)}(t_i, t_j) = \emptyset \quad \forall (t_i, t_j) \in T^2 \setminus \{(t, t) | t \in T\}
+\end{align}
+
+Optimal Solution: $S \in O \subseteq F$
+\begin{align}
+	\nonumber C(S_i) \leq C(S_j) \quad \forall S_j \in F \quad \forall S_i \in O
+\end{align}
+
+\end{definition}
+
+
+\section{Robust Actor Allocation Problem}
+
+\begin{definition}
+Given a graph $G=(V,E,w_c,w_i)$ and a set of processors $P$, where $w_c : E \rightarrow \mathbb{R}^+$ and $w_i : V \times P \rightarrow \mathbb{R}^+$, find a mapping $\alpha : V \rightarrow P$ such that:
+$\displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \alpha(v))$ is minimised.
+
+\begin{align}
+	\nonumber RAAP = & (V,E,w_c, w_i, P)\\
+	\nonumber & E \subseteq V^2\\
+	\nonumber & w_c : E \rightarrow \mathbb{Z}^+\\
+	\nonumber & w_i : V \times P \rightarrow \mathbb{Z}^+\\
+	\nonumber & P = \{p_1, p_2, ...p_p\}
+\end{align}
+
+Solution Space: $\alpha \in P^V \subseteq P(V \times P)$
+
+Solution Cost: $C(\alpha) = \displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \alpha(v))$
+
+Feasible Solution: $\alpha \in F \subseteq P^V$
+\begin{align}
+	\nonumber C(\alpha) \neq \infty
+\end{align}
+
+Optimal Solution: $\alpha \in O \subseteq F$
+\begin{align}
+	\nonumber 	C(\alpha_i) \leq C(\alpha_j) \quad \forall \alpha_j \in F \quad \forall \alpha_i \in O
+\end{align}
+
+\end{definition}
+
+\section{Mapping}
+
+\begin{definition}
+Mapping
+
+\begin{align}
+	\nonumber I \in & MTC(V,E,w,T) &\\
+	\nonumber I' \in & RAAP(V', E', w_c, w_i, P) &\\
+	\nonumber & I \mapsto I' if: &\\
+	\nonumber & V' = V\\
+	\nonumber & E' = E\\
+	\nonumber & P = T\\
+	\nonumber & w_c = w\\
+	\nonumber & w_i(v,p) = \mbox{$\left\{ 
+		\begin{array}{l l}
+			0 & \quad \mbox{if $a \in V \setminus T$}\\
+			0 & \quad \mbox{if $p = v$}\\
+			\infty & \quad \mbox{otherwise}\\ \end{array} \right.$}
+\end{align}
+\end{definition}
+
+\begin{definition}
+Reversal Function $\gamma$
+
+\begin{align}
+	\nonumber \gamma & : (P^V) \rightarrow P(E) \\
+	\nonumber \gamma & \mapsto \{(u,v) \in E | \alpha(u) \neq \alpha(v)\}
+\end{align}
+\end{definition}
+
+\begin{lemma}
+The mapping is always feasible
+
+$\forall \alpha \in F' : \quad \gamma(\alpha) \in F$
+\end{lemma}
+
+\begin{proof}
+\begin{align}
+	\nonumber \alpha(p_i) = p_i & \quad \mbox{(Otherwise $\alpha \not\in F'$)} \\
+	\nonumber \Pi_{G=(V, E \setminus \gamma(\alpha))} (p_i, p_j) = \emptyset  \quad \forall p_i, p_j \in P & \quad \mbox{(From the definition of $\gamma$)}
+\end{align}
+\end{proof}
+
+\begin{lemma}
+The mapping is always optimal
+
+$\forall \alpha \in O' : \quad \gamma(\alpha) \in O$
+\end{lemma}
+
+\begin{proof}
+\begin{align}
+	\nonumber C'(\alpha) = C(\gamma(\alpha)) & \quad \mbox{(Otherwise $C'(\alpha) = \infty$ and $\alpha \not\in F'$)}
+\end{align}
+\end{proof}
 
 \begin{definition}
 	A {\em pathset} : $\Pi_G$ is the set of all paths from every node to every other node in G.
@@ -99,8 +238,6 @@ From lemma \ref{MAINPROC} we saw that all terminals are assigned to their main p
 	\nonumber		& = \displaystyle\sum\limits_{(u,v) \in E'} w(u,v)
 \end{align}
 \end{proof}
-
-\banach taski paradox
 
 \begin{lemma}
 \label{BREAKPATH}
