--- a/hons/docs/complexity3.tex
+++ b/hons/docs/complexity3.tex
@@ -13,15 +13,15 @@
 Graph $G$
 \begin{align}
 	\nonumber G = & (V,E) \\
-	\nonumber V = & \{v_1, v_2, ... v_n\} \\
-	\nonumber E \subseteq & V^2
+	\nonumber V = & \{v_1, v_2, ..., v_n\} \quad & (vertices)\\
+	\nonumber E \subseteq & V^2 & (edges)
 \end{align}
 \end{definition}
 
 \begin{definition}
 Path $\pi$ for graph $G = (V,E)$ of length $l$
 \begin{align}
-	\nonumber \pi(v_a, v_b) = \{(x_i, x_{i+1}) : 0 \leq i < l \wedge x_i, x_{i+1} \in V \wedge x_0 = v_a \wedge x_l = v_b)\}
+	\nonumber \pi(v_a, v_b) = \{(x_i, x_{i+1}) : 0 \leq i < l \wedge x_i, x_{i+1} \in V \wedge x_0 = v_a \wedge x_l = v_b\}
 \end{align}
 \end{definition}
 
